kubernetes/apps/networking-system/agentgateway/config/llm/httproute.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-llm-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: agentgateway-proxy
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /chat
          headers:
            - type: Exact
              name: x-priority
              value: "high"
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: llm-backend-complex
      timeouts:
        request: 300s
    - matches:
        - path:
            type: PathPrefix
            value: /chat
          headers:
            - type: Exact
              name: x-model
              value: "complex"
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: llm-backend-complex
      timeouts:
        request: 300s
    - matches:
        - path:
            type: PathPrefix
            value: /chat
          headers:
            - type: Exact
              name: x-model
              value: "fast"
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: llm-backend-fast
      timeouts:
        request: 300s
    - matches:
        - path:
            type: PathPrefix
            value: /chat
          headers:
            - type: Exact
              name: x-model
              value: "memory"
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: llm-backend-memory
      timeouts:
        request: 300s
    - matches:
        - path:
            type: PathPrefix
            value: /chat
          headers:
            - type: Exact
              name: x-model
              value: "vision"
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: llm-backend-vision
      timeouts:
        request: 300s
    - matches:
        - path:
            type: PathPrefix
            value: /chat
          headers:
            - type: Exact
              name: x-model
              value: "micro"
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: llm-backend-micro
      timeouts:
        request: 120s
